@@ -186,6 +186,9 @@
    The 8th release of NuttX (nuttx-0.2.5) is available for download
    from the <a href="http://sourceforge.net/project/showfiles.php?group_id=189573">SourceForge</a>
    website.
+   The change log associated with the release is available <a href="#currentrelease">here</a>.
+   Unreleased changes after this release are avalable in CVS.
+   These unreleased changes are listed <a href="#pendingchanges">here</a>.
 </p>
 
 <table width ="100%">
@@ -376,6 +379,35 @@ Other memory:
   </tr>
 </table>
 
+<center><table width ="80%">
+<tr>
+  <td><img src="favicon.ico"></td>
+   <td>
+      <a href="#olderreleases">Change Logs for Older Releases</a><br>
+   </td>
+</tr>
+<tr>
+  <td><img src="favicon.ico"></td>
+   <td>
+      <a href="#currentrelease">ChangeLog for Current Release</a><br>
+   </td>
+</tr>
+<tr>
+  <td><img src="favicon.ico"></td>
+   <td>
+      <a href="#pendingchanges">Unreleased Changes</a>
+   </td>
+</tr>
+</table></center>
+
+<table width ="100%">
+  <tr bgcolor="#e4e4e4">
+  <td>
+    <a name="olderreleases>Change Logs for Older Releases</a>
+  </td>
+  </tr>
+</table>
+
 <ul><pre>
 0.1.0 2007-03-09  Gregory Nutt <spudmonkey@racsa.co.cr>
 
@@ -499,7 +531,17 @@ Other memory:
 	* Logic from arch/c5471 and arch/dm320 combined into arch/arm.
 	  arch/c5471 and arch/dm320 are deprecated and will be removed
 	  when the new c5471 and dm320 logic is verified.
+</pre></ul>
 
+<table width ="100%">
+  <tr bgcolor="#e4e4e4">
+  <td>
+    <a name="currentrelease">ChangeLog for Current Release</a>
+  </td>
+  </tr>
+</table>
+
+<pre><ul>
 0.2.5 2007-05-19 Gregory Nutt <spudmonkey@racsa.co.cr>
 
 	* Corrected some build/configuration issues introduced with the
@@ -516,10 +558,22 @@ Other memory:
 	* close() was not closing the underlying device.
 	* Added fsync()
 	* Added strspn() and strcspn()
+</pre></ul>
 
+<table width ="100%">
+  <tr bgcolor="#e4e4e4">
+  <td>
+    <a name="pendingchanges">Unreleased Changes</a>
+  </td>
+  </tr>
+</table>
+
+<pre><ul>
 0.2.6 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
 	* Added unlink(), mkdir(), rmdir(), and rename()
+	* Fixed several serious FAT errors with oflags handling (&& instead of &)
+	* Added FAT support for unlink() and rmdir()
 	* Started m68322
 </pre></ul>
 
